changed responsiveness and design

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div id="temperature"></div>
             <div id="description"></div>
             <div id="weatherIcon"></div>
-            <button id="toggle" class="button alert" href="#">Toggle temp - °C/°F</button>
+            <button id="toggle" class="button alert" href="#">°C/°F</button>
             <p id="time"></p>
         </div>
 
