added favicon and org folders

--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
         <title>Weather.js</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="./styles/main.css">
+        <link rel='icon' href='./images/favicon.png' type='image/x-icon'/ >
         <link href="https://fonts.googleapis.com/css?family=Black+Han+Sans" rel="stylesheet">
     </head>
     <body>
-
-        <h1>Your Local Weather</h1>
+        <div id="header">
+            <h1>Your Local Weather</h1>
+            <hr>
+        </div>
         <div class="container"> 
             <div id="location"></div>
             <div id="temperature"></div>
@@ -20,6 +23,6 @@
             <p id="time"></p>
         </div>
 
-        <script src="main.js"></script>
+        <script src="./js/main.js"></script>
     </body>
 </html>
